<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/introduc"
        android:icon="@drawable/intro"
        android:title="@string/introduc" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share" />
    <item
        android:id="@+id/comment"
        android:icon="@drawable/cmt"
        android:title="@string/comment" />
    <item
        android:id="@+id/pass"
        android:icon="@drawable/pass"
        android:title="Khóa mật khẩu" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/exit"
        android:title="@string/exit" />


</menu>