<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="30dp"
    android:orientation="vertical">


    <TextView
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/introduction"/>

    <TextView
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/xam_1"
        android:text="@string/intro"/>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_img"/>
        <TextView

            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/xam_1"
            android:text="@string/hinhanh"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_clock"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/xam_1"
            android:text="@string/hengio"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/star_yes"/>
        <TextView
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/xam_1"
            android:text="@string/danhdau"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_fb"/>
        <TextView
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/xam_1"
            android:text="@string/loginfb"/>
    </LinearLayout>


     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <RelativeLayout
             android:layout_marginTop="7dp"
             android:layout_width="match_parent"
             android:layout_height="30dp">

             <CheckBox

                 android:id="@+id/checkbox"
                 style="@style/AppTheme1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="2dp"
                 android:background="@drawable/custom_shape_buttom"
                 android:theme="@style/AppTheme1" />
             <TextView
                 android:id="@+id/a"
                 android:layout_marginLeft="5dp"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/checkbox"
                 android:textSize="14sp"
                 android:fontFamily="@font/gotham"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dieukhoan"
                 android:textColor="@color/white"/>
             <LinearLayout
                 android:layout_marginTop="2dp"
                 android:layout_toRightOf="@id/a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="4dp">
                 <TextView
                     android:id="@+id/dieukhoan"
                     android:textColor="@color/red_1"
                     android:textSize="14sp"
                     android:fontFamily="@font/gotham"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/dieukhoan_a"/>
                 <View
                     android:background="@color/red_1"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"/>

             </LinearLayout>
         </RelativeLayout>

         <com.facebook.login.widget.LoginButton
             android:visibility="gone"
             android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/custom_shape_buttom" />
         <Button
             android:drawableRight="@drawable/fb"
             android:paddingLeft="30dp"
             android:fontFamily="@font/gotham"
             android:id="@+id/letgo"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="20dp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:background="@drawable/custom_shape_buttom"
             android:text="@string/letgo"
             android:textAllCaps="false"
             android:layout_width="match_parent"
             android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
             android:layout_height="60dp" />

         <TextView
             android:textSize="10sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dev_name"
             android:textColor="@color/xam_1"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"/>


     </RelativeLayout>




</LinearLayout>