<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    >


        <ImageView
            android:id="@+id/urlfb"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo_note"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/urlfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textSize="18sp"
            android:id="@+id/namefb"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_name"/>
        <TextView
            android:textSize="12dp"
            android:layout_below="@id/namefb"
            android:id="@+id/sum"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/urlfb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soluong"/>

        <TextView
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ngaydangki"/>
    </LinearLayout>


</RelativeLayout>