<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_dialog_c">
        <TextView
            android:id="@+id/txtEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp"
            android:textStyle="bold"
            android:textColor="@color/blackDark"
            android:text="@string/edit1"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp"
            android:textStyle="bold"
            android:textColor="@color/blackDark"
            android:text="@string/copy"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/copyaudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp"
            android:textStyle="bold"
            android:textColor="@color/blackDark"
            android:text="@string/copyaudio"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp"
            android:textStyle="bold"
            android:textColor="@color/blackDark"
            android:text="@string/share"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_dialog_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="20dp"
            android:textStyle="bold"
            android:textColor="@color/blackDark"
            android:text="@string/huy"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>