<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen">

    <LinearLayout
        android:padding="10dp"
        android:background="@drawable/custom_gradient_a"
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/good"
                android:textColor="#ffffff"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/gotham"
                android:text="@string/morning"
                android:textColor="#ffffff"
                android:textSize="32sp" />

            <View
                android:id="@+id/layout_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/custom_gradient_binhminh" />

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_gradient_a"/>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ghichu"
        android:fontFamily="@font/gotham"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/pr"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_name"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="13dp"
        android:fontFamily="@font/calibri"/>

</RelativeLayout>