<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddNote">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">


                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/back"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:alpha="0.5"
                    android:fontFamily="@font/gotham"
                    android:padding="6dp"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/style_toolbar"
                    android:ellipsize="end"
                    android:fontFamily="@font/gotham"
                    android:gravity="center"
                    android:hint="@string/note"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_toolbar"
            android:gravity="top|left"
            android:hint="@string/note_a"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_toolbar"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_img" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/audio"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/audio" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="0dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/star_no" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="15sp" />


            <ImageView
                android:id="@+id/clock"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/ic_clock" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/align"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/align" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/noimg"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/closeIMG"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                android:background="@drawable/custom_gradient_a"
                android:padding="1dp"
                android:src="@drawable/exit"
                android:visibility="gone" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:background="@drawable/custom_gradient_a"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar"
                android:textColor="@color/white"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:src="@android:drawable/ic_media_play"
                android:text="PLAY SOUND"
                android:visibility="gone" />
            <ImageView
                android:id="@+id/closeAudio"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/seekbar"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="15dp"
                android:background="@drawable/custom_gradient_a"
                android:padding="1dp"
                android:visibility="gone"
                android:src="@drawable/exit"
                />
        </RelativeLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>